tmp/stateful.yaml
apiVersion: v1
kind: Service
metadata:
  name: mystateful
  labels:
    app: mystateful
spec:
  ports:
  - name: http
    port: 80
  clusterIP: None
  selector:
    app: mystateful
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystateful
spec:
  serviceName: mystateful
  selector:
    matchLabels:
      app: mystateful
  replicas: 3
  template:
    metadata:
      labels:
        app: mystateful
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: alpine
        image: alpine:latest
        volumeMounts:
        - name: mystateful
          mountPath: /place-to-be-mounted
        command: ["/bin/sh", "-c"]
        args: ["while : ; do ls -alt /place-to-be-mounted ; sleep 1 ; done ;"]
  volumeClaimTemplates:
  - metadata:
      name: mystateful
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
