tmp/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-application
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "zavialov.serveblog.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-application
            port:
              number: 80
